[gd_scene load_steps=2 format=3 uid="uid://dn3jomds7pxs"]

[ext_resource type="Script" path="res://addons/gesture_recognizer/scripts/Create.gd" id="1_sx3a7"]

[node name="Create" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sx3a7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -124.0
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="TextEdit" type="TextEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Enter the name of the gesture without spaces"

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Button2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="Popup" type="Panel" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -135.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/Popup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="gui_input" from="Panel/VBoxContainer/TextEdit" to="." method="_on_text_edit_gui_input"]
[connection signal="button_up" from="Panel/VBoxContainer/Button" to="." method="_on_button_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer/Button2" to="." method="_on_button_2_button_up"]
